deploy/phibek/dev/referenceGrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: grant-gateway-api-to-istio
  namespace: phibek
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: istio-system
  to:
    - group: ""
      kind: Service
      name: gateway-api
