deploy/phibek/dev/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phibek
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api
  namespace: phibek
  labels:
    app: gateway-api
spec:
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      imagePullSecrets:
        - name: regis-secret
      containers:
        - name: gateway-api
          image: golang:1.26
          workingDir: /app
          command: ["sleep"]
          args: ["infinity"]
          # command: ["go", "run", ".", "--env=dev"]
          # command: ["./main", "--env=dev"]
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
            - name: grpc
              containerPort: 50051
          volumeMounts:
            - name: src-code
              mountPath: /app
            - name: rootca-volume
              mountPath: /app/certs/tls.ca
              subPath: tls.ca
              readOnly: true
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "2Gi"
          securityContext:
            privileged: true
      volumes:
        - name: src-code
          hostPath:
            path: /home/phibek/gateway-api
            type: Directory
        - name: rootca-volume
          configMap:
            name: rootca
            items:
              - key: ca.crt
                path: tls.ca
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-api
  namespace: phibek
spec:
  selector:
    app: gateway-api
  ports:
    - name: http
      port: 3001
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 50051
      targetPort: grpc
      protocol: TCP
  type: ClusterIP

# go install github.com/swaggo/swag/cmd/swag@latest
